# ipynb-test

./: .gitignore  pyproject.toml  requirements.txt
ipynb_test/: cell.py  kernel.py  notebook.py  tester.py
pytest_nb/: notebook.py
