[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipynb-test"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Nathnael (Nati) Bekele"}
]
maintainers = [
    {name = "Nathnael (Nati) Bekele"}
]
description = "Seedable Jupyter Notebook testing tool"
keywords = [
    "jupyter notebook", "testing", "pytest", "notebook", "python"
]
dependencies = [
    "jupyter_client==8.6.3",
]
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Framework :: Pytest",
]

[project.urls]
Homepage = "https://github.com/natibek/ipynb-test"
Repository = "https://github.com/natibek/ipynb-test"
Issues = "https://github.com/natibek/ipynb-test/issues"
Readme = "https://github.com/natibek/ipynb-test/blob/main/README.md"
Changelog = "https://github.com/natibek/ipynb-test/blob/main/CHANGELOG"

[tool.setuptools.packages.find]
include = ["ipynb_test*"]

[tool.setuptools.dynamic]
version = {attr = "ipynb_test.__version__"}

[project.scripts]
ipynb_test = "ipynb_test.tester:run_tester"